Layers 4.1: InCallUI dialpad digits color
InCallUI's dialpad digits (not the digits' text) color is linked to the InCallUI theme primary color, on runtime. This is coded as such because Google wanted to update the InCallUI's theme (primary and primary-dark) colors in MSIM devices on the fly, based on which SIM card was used to make the call.
This commit:
* makes this behavior configurable by a boolean
* links the digits color to a color value

This way, the default behavior is preserved. The themer has to set the "config_dialpadDigitsStaticColor" boolean to true, in order to theme the color value. If he doesn't change the boolean, the default behavior is preserved and the digits color works as Google wanted.

Change-Id: Ie57c2128416aa826118ccc6321e6d0854cbb4ce8

--- a/res/values/layers_colors.xml
+++ b/res/values/layers_colors.xml
@@ -16,4 +16,5 @@
 
 <resources>
     <color name="background_white">@android:color/white</color>
+    <color name="dialpad_digits_color">@color/incall_background_color</color>
 </resources> 
